# LRDE-v1ca-active-learning

./: README.md
angluin_regular/: angluin.py  angluin_old.py  expected_result  final
angluin_regular/given/: display_automaton.py  thlr_tools.py  thlr_tp2_correction.py  thlr_tp3_correction.py
one_counter/: learn.py  note.txt
one_counter/cpp/: CMakeLists.txt  TODO
one_counter/cpp/includes/: R1CA.h  R1CA_builder.h  R1CA_learner.h  V1CA.h  V1CA_builder.h  V1CA_learner.h  V1CA_reader.h  alphabet.h  automatic_teacher.h  automatic_v1ca_teacher.h  automaton_teacher.h  behaviour_graph.h  dataframe.h  displayable.h  dot_writers.h  language.h  language_def.h  learner.h  manual_eq_queries_teacher.h  manual_teacher.h  one_counter_automaton.h  semi_manual_teacher.h  teacher.h  utils.h  word_counter.h
one_counter/cpp/includes/teachers/: automatic_v1ca_teacher.h  manual_eq_queries_teacher.h  teacher.h
one_counter/cpp/src/: R1CA.cpp  V1CA.cpp  V1CA_builder.cpp  V1CA_learner.cpp  V1CA_reader.cpp  alphabet.cpp  automatic_teacher.cpp  automaton_teacher.cpp  behaviour_graph.cpp  dataframe.cpp  dot_writers.cpp  language.cpp  learner.cpp  main.cpp  manual_teacher.cpp  one_counter_automaton.cpp  semi_manual_teacher.cpp  teacher.cpp
one_counter/cpp/src/r1ca_learning/: R1CA.cpp
one_counter/cpp/src/teachers/: automatic_v1ca_teacher.cpp  automaton_teacher.cpp  manual_teacher.cpp  semi_manual_teacher.cpp  teacher.cpp
one_counter/cpp/src/v1ca_learning/: V1CA.cpp  V1CA_builder.cpp  V1CA_learner.cpp
one_counter/given/: thlr_tools.py
one_counter/python/: bench.py  learn.py  note.txt
(+7 files in other folders)
